совершенно невероятно эстетически идеальный 1.2

--- a/system_programming/pack_1/task_1/Makefile
+++ b/system_programming/pack_1/task_1/Makefile
@@ -1,2 +1,2 @@
 task:
-	gcc src/main.c src/user_vector.c src/load_data.c src/auth.c src/time_functions.c -o main.out
+	gcc src/main.c src/user_vector.c src/load_data.c src/auth.c src/time_functions.c src/state.c -o main.out
